Basic form error handling

--- a/client/src/routes/app.css
+++ b/client/src/routes/app.css
@@ -2,4 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+::-moz-selection {
+    color: #FFFFFF;
+    background: #832e57;
+}
 
+::selection {
+    color: #FFFFFF;
+    background: #832e57;
+}
